--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,36 @@
-<p>header works!</p>
+<div class="jumbotron">
+    <h1 class="text-center">EECSA</h1>
+</div>
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <span class="navbar-brand">
+      <a class="nav-link" style="cursor: pointer" role="button" routerLink="/" routerLinkActive="active">Home</a>
+    </span>
+    <button class="navbar-toggler" type="button" (click)="collapsed = !collapsed">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+    <div class="navbar-collapse" [class.collapse]="collapsed" id="navbarContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" style="cursor: pointer" role="button" routerLink="/products">
+                Products
+              </a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" style="cursor: pointer" role="button" routerLink="/services">
+                Services
+              </a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" style="cursor: pointer" role="button" routerLink="/jobs">
+                Jobs
+              </a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" style="cursor: pointer" role="button" routerLink="/contact">
+                                Contact Us
+                            </a>
+            </li>
+        </ul>
+    </div>
+</nav>
