--- a/src/app/who/who.component.html
+++ b/src/app/who/who.component.html
@@ -1,1 +1,3 @@
-<p>who works!</p>
+<h3>Welcome to EECSA</h3>
+<p>We are IT Consultants (Full Stack Developers) with support of IIT Alumnus providing technical support for efficient design and product solutions
+</p>
