MapView Carousel Added and Reload Issues Fixed

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -44,6 +44,6 @@
     </div>
     <br>
     <div class="text-center">
-        <a href="#">Contact Us</a>
+        <a routerLink="/contact">Contact Us</a>
     </div>
 </div>
