--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,11 @@
-<div id="map" class="map"></div>
+<div class="row justify-content-center">
+    <div class="col-md-6 flex-column">
+        <h2>Contact Us</h2>
+        <h5>Darshini Karthikeyan</h5>
+
+    </div>
+    <div class="col-md-6 flex-column">
+        <div id="map" class="map">
+        </div>
+
+    </div>
