--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -1,1 +1,8 @@
-<p>jobs works!</p>
+<div class="row justify-content-center">
+    <div class="col-auto">
+        <app-job-list></app-job-list>
+    </div>
+    <div class="col-auto">
+        <router-outlet></router-outlet>
+    </div>
+</div>
