--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,8 @@
-<p>products works!</p>
+<div class="row justify-content-center">
+    <div class="col-auto">
+        <app-product-list></app-product-list>
+    </div>
+    <div class="col-auto">
+        <router-outlet></router-outlet>
+    </div>
+</div>
