--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,1 +1,8 @@
-<p>services works!</p>
+<div class="row justify-content-center">
+    <div class="col-auto">
+        <app-service-list></app-service-list>
+    </div>
+    <div class="col-auto">
+        <router-outlet></router-outlet>
+    </div>
+</div>
