--- a/src/app/who/who.component.html
+++ b/src/app/who/who.component.html
@@ -1,3 +1,4 @@
+<link href='http://fonts.googleapis.com/css?family=Arvo:400,300,700' rel='stylesheet' type='text/css'>
 <h3>Welcome to EECSA</h3>
 <ngb-carousel *ngIf="images">
     <ng-template ngbSlide>
